[package]
name = "marktex"
version = "0.1.0"
edition = "2021"

authors = ["Daniel M"]
license = "MIT"
repository = "https://github.com/dnlmlr/marktex"
description = "A lightweight (but much less powerful) single executable alternative to LaTeX, based on Markdown syntax that just works™"
keywords = ["pdf", "text", "markdown"]
categories = ["text-processing"]

[profile.release]
strip = true
lto = "thin"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
comrak = "0.16.0"
# This is a fork of the original genpdf-rs with additional features
genpdf = { git = "https://github.com/dnlmlr/genpdf-rs", features = [
    "hyphenation",
    "images",
    "math",
    "code-syntax-highlighting",
] }
# genpdf = { path="./genpdf-rs", features = [
#     "hyphenation",
#     "images",
#     "math",
#     "code-syntax-highlighting",
# ] }
hyphenation = { version = "0.8.4", default-features = false }
anyhow = "1.0.69"
zstd = { version = "0.12.3", features = ["thin-lto"] }

[build-dependencies]
zstd = { version = "0.12.3" }
